reply overflow fixed

--- a/src/app/molecules/message/Message.scss
+++ b/src/app/molecules/message/Message.scss
@@ -96,6 +96,7 @@
 .message__content,
 .message__reactions {
   max-width: 640px;
+  min-width: 0;
 }
 
 
